--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,8 @@
 || COMMON ||
 ------------
 
+- CommandLine facility (for scene file, at least.)
+- FPS Camera.
 - Texture load.
 - Procedural stock geometry.
 - FBO facility + render to FBO and blit final quad.
