--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,9 @@
 ------------
 
 x CommandLine facility (for scene file, at least.)
-- FPS Camera.
-- Texture load.
+x FPS Camera.
+x Texture load.
+x Fullscreen quad.
 - Procedural stock geometry.
 - FBO facility + render to FBO and blit final quad.
 - Picking (= global map of objects)
