--- a/TODO.txt
+++ b/TODO.txt
@@ -8,7 +8,7 @@ x FPS Camera.
 x Texture load.
 x Fullscreen quad.
 - Procedural stock geometry.
-- FBO facility + render to FBO and blit final quad.
+x FBO facility + render to FBO and blit final quad.
 - Picking (= global map of objects)
 
 
