--- a/TODO.txt
+++ b/TODO.txt
@@ -28,6 +28,29 @@ HDR Tonemapping:
 - Luminance Histogram (compute shaders)
   - http://alextardif.com/HistogramLuminance.html
 - ACES, Filmic, Reinhardt
+  - https://github.com/TheRealMJP/BakingLab/blob/master/BakingLab/ACES.hlsl
+  - https://www.slideshare.net/ozlael/hable-john-uncharted2-hdr-lighting/53
+    gamma = (x*(6.2*x+0.5))/(x*(6.2*x+1.7)+0.06);
+    A = shoulder strength
+    B = linear strength
+    C = Linear Angle
+    D = Toe Strength
+    E = Toe Numerator
+    F = Toe Denominator
+    => E/F = Toe Angle
+
+    F(x) = ((x*(A*x+C*B)+D*E)/(x*(A*x+B)+D*F)) - E/F;
+    FinalColor = F(LinearColor)/F(LinearWhite)
+
+    // without pow(1/2.2)
+    A = 0.22
+    B = 0.30
+    C = 0.10
+    D = 0.20
+    E = 0.01
+    F = 0.30
+    Linear White Point Value = 11.2
+
 
 Cascaded ShadowMaps:
 -------------------
